# lin-lang

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  array_pipeline.lin  async_await.lin  closures.lin  object_access.lin  parallel_speedup.lin  recursion.lin  run.sh  shared_lock.lin  string_build.lin  thread_pool.lin  worker_roundtrip.lin
crates/lin/: Cargo.toml
crates/lin-check/: Cargo.toml
crates/lin-check/src/: checker.rs  compat.rs  env.rs  exhaustiveness.rs  lib.rs  resolve.rs  signature.rs  typed_ir.rs  types.rs  zonk.rs
crates/lin-check/src/checker/: call.rs  expr.rs  function.rs  helpers.rs  intrinsics.rs  mod.rs  ops.rs  pattern.rs  stmt.rs
crates/lin-check/tests/: snapshots.rs  type_check.rs
crates/lin-check/tests/snapshots/: snapshots__snap_function_return_type_mismatch.snap  snapshots__snap_missing_object_field.snap  snapshots__snap_narrowing_disallowed.snap  snapshots__snap_type_mismatch.snap  snapshots__snap_undefined_variable.snap  snapshots__snap_unknown_type.snap
crates/lin-codegen/: Cargo.toml
crates/lin-codegen/src/: codegen.rs  coverage.rs  lib.rs
crates/lin-codegen/src/codegen/: arith.rs  boxing.rs  builder_ext.rs  call.rs  data.rs  intrinsics.rs  literals.rs  match.rs  mod.rs  rc.rs  runtime.rs  types.rs
crates/lin-common/: Cargo.toml
crates/lin-compile/: Cargo.toml
crates/lin-compile/src/: lib.rs
crates/lin-eval/: Cargo.toml
crates/lin-eval/src/: env.rs  interpreter.rs  lib.rs  value.rs
crates/lin-eval/tests/: integration.rs
crates/lin-ir/: Cargo.toml
crates/lin-lex/: Cargo.toml
crates/lin-parse/: Cargo.toml
crates/lin-runtime/: Cargo.toml  lin.h
crates/lin/src/: main.rs
crates/lin/src/cmd/: build.rs  check.rs  clean.rs  mod.rs  run.rs  test.rs  watch.rs
crates/lin/tests/: integration.rs
docs/: ARCHITECTURE_CLEANUP.md  ASYNC_DESIGN.md  COMPILER.md  DECISIONS.md  EXAMPLE.md  IR_PARITY_LEDGER.md  MEMORY_MANAGEMENT.md  SPECIFICATION.md  STDLIB.md  TEST_UTILITIES.md  TODO.md
docs-site/builder/: hero.lin  main.lin  markdown.lin  nav.lin
docs-site/content/: getting-started.md  index.md  nav.json
docs-site/examples/: async.lin  functional.lin  low-level.lin  pattern-matching.lin  union-types.lin
docs-site/output/: getting-started.html  index.html
docs-site/static/: style.css  theme.js
docs-site/templates/: home.lint  page.lint
editors/vscode/: .vscodeignore  README.md  client.js  package-lock.json  package.json
examples/: arithmetic.lin  closures.lin  cov_demo.test.lin  custom-iterator.lin  data-pipeline.lin  default_args.lin  ffi-c.lin  from-json.lin  full-example.lin  full_example.lin  functions.lin  iterators.lin  multi-file.lin  objects.lin  pattern-match.lin  proc_demo.lin  showcase.lin  strings.lin
examples/calc/: README.md  calc.lin  calc.test.lin  eval.lin  eval.test.lin  integration.test.lin  lexer.lin  lexer.test.lin  main.lin  parser.lin  parser.test.lin
examples/codec/: README.md  bits.lin  bits.test.lin  codec.test.lin  integration.test.lin  main.lin  tlv.lin  tlv.test.lin
stdlib/: array.lin  array.test.lin  async.lin  async.test.lin  bytes.lin  bytes.test.lin  env.test.lin  fs.lin  fs.test.lin  hash.test.lin  http.lin  http.test.lin  io.lin  io.test.lin  iter.lin  json.lin  json.test.lin  math.test.lin  net.lin  net.test.lin  number.lin  number.test.lin  object.lin  object.test.lin  path.lin  path.test.lin  proc.lin  proc.test.lin  process.lin  process.test.lin  result.lin  server.lin  signal.lin  string.lin  string.test.lin  template.lin  template.test.lin  test.lin  test.test.lin  time.lin  (+2 more)
(+197 files in other folders)
