[workspace]
members = [
    "crates/lin-common",
    "crates/lin-lex",
    "crates/lin-parse",
    "crates/lin-eval",
    "crates/lin-check",
    "crates/lin-ir",
    "crates/lin-codegen",
    "crates/lin-runtime",
    "crates/lin-compile",
    "crates/lin",
    "crates/lin-lsp",
]
resolver = "2"

[workspace.dependencies]
indexmap = { version = "2", features = ["serde"] }
ariadne = "0.6"
serde = { version = "1", features = ["derive"] }
bincode = "1"
sha2 = "0.10"
