[package]
name = "lin-compile"
version = "0.1.0"
edition = "2021"

[dependencies]
lin-common = { path = "../lin-common" }
lin-lex = { path = "../lin-lex" }
lin-parse = { path = "../lin-parse" }
lin-check = { path = "../lin-check" }
lin-codegen = { path = "../lin-codegen" }
lin-runtime = { path = "../lin-runtime" }
inkwell = { version = "0.9", features = ["llvm22-1"] }
bincode = { workspace = true }
sha2 = { workspace = true }
