[package]
name = "lin-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
lin-common = { path = "../lin-common" }
lin-lex = { path = "../lin-lex" }
lin-parse = { path = "../lin-parse" }
indexmap = { workspace = true }
serde_json = "1"
ureq = { workspace = true }
tiny_http = { workspace = true }
