[package]
name = "lin"
version = "0.1.0"
edition = "2021"

[dependencies]
lin-common = { path = "../lin-common" }
lin-lex = { path = "../lin-lex" }
lin-parse = { path = "../lin-parse" }
lin-check = { path = "../lin-check" }
lin-compile = { path = "../lin-compile" }

[dev-dependencies]
tiny_http = { workspace = true }
